--- a/index.html
+++ b/index.html
@@ -4,15 +4,54 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>自己紹介</title>
+    <title>アプリケーション概要</title>
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- jQuery読み込み -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- BootstrapのJS読み込み -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="about.css">
   </head>
   <body>
-    <h1></h1>
+      <header>
+          <nav>
+             <ul>
+             <li><a href="">ホーム</a></li>
+             <li id="current"><a href="">アプリケーション概要</a></li>
+             <li><a href="contact.html">お問合せ</a></li>
+             </ul> 
+          </nav>
+      </header>
+      <main>
+        <br>
+         <h1>アプリケーション概要</h1>
+         <div class="center">
+             <img src="graph.jpg" class="sample">
+         </div>
+         <p>病院での診察や普段の体調管理が記録として残しやすいような仕様になっています。</p>
+         <P>以下の三点はグラフで表示されるため、日々の差異を分かりやすく読み取ることが出来ます。</P>
+           <ul>
+              <li>体重</li>
+              <li>体温</li>
+              <li>摂食量</li>
+           </ul>   
+      </main>
+      <br>
+      <div id="sub">
+         <h2>製作者プロフィール</h2>
+         <img src="yuu.JPG" alt="profile" width="350px" height="350px">
+           <div id="sub2">
+              <h3><ruby>浜崎<rt>はまざき</rt></ruby>　<ruby>妃香瑠<rt>ひかる</rt></ruby></h3>
+              <br>
+              <p>静岡県出身。フリーライター。</p>
+              <p>私のポートフォリオを見て気になった方は、
+              <br>
+              <a href="contact.html">お問合せ</a>よりお願いいたします。</p> 
+           </div>
+      </div>
+      <footer>
+        <p>&copy; 2016 Hikaru Hamazaki</p>
+      </footer>
   </body>
 </html>
