--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>アプリケーション概要</title>
+    <meta name="description" content="今回制作したアプリケーションの紹介です。">
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- jQuery読み込み -->
@@ -27,7 +28,7 @@
         <br>
          <h1>アプリケーション概要</h1>
          <div class="center">
-             <img src="graph.jpg" class="sample">
+             <img src="graph.jpg" class="sample" alt="graph">
          </div>
          <p>病院での診察や普段の体調管理が記録として残しやすいような仕様になっています。</p>
          <P>以下の三点はグラフで表示されるため、日々の差異を分かりやすく読み取ることが出来ます。</P>
@@ -40,7 +41,7 @@
       <br>
       <div id="sub">
          <h2>製作者プロフィール</h2>
-         <img src="yuu.JPG" alt="profile" width="350px" height="350px">
+         <img src="yuu.JPG" alt="profile" width="350" height="350">
            <div id="sub2">
               <h3><ruby>浜崎<rt>はまざき</rt></ruby>　<ruby>妃香瑠<rt>ひかる</rt></ruby></h3>
               <br>
@@ -48,6 +49,9 @@
               <p>私のポートフォリオを見て気になった方は、
               <br>
               <a href="contact.html">お問合せ</a>よりお願いいたします。</p> 
+              <br>
+              <h3>リンクページ</h3>
+              <p></p><a href="https://github.com/hikaru0704">github</a></p>
            </div>
       </div>
       <footer>
