--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <a href="contact.html">お問合せ</a>よりお願いいたします。</p> 
               <br>
               <h3>リンクページ</h3>
-              <p></p><a href="https://github.com/hikaru0704">github</a></p>
+              <a href="https://github.com/hikaru0704">github</a>
            </div>
       </div>
       <footer>
